tests/baselines/reference/unusedTypeParameters10.errors.txt
unusedTypeParameters10.ts(1,11): error TS6133: 'T' is declared but its value is never read.


==== unusedTypeParameters10.ts (1 errors) ====
    type Alias<T> = { };
              ~~~
!!! error TS6133: 'T' is declared but its value is never read.
    type Alias2<T> = { x: T };
    